# Azurender

./: README  writeup.txt
documents/: 20140710  20140711
reference_shots/: Thumbs.db
resources/scenes/: bunny.scene  cornell_box.scene  cornell_box1.scene  cornell_box3.scene  cornell_box_cube.scene  cornell_box_lucy.scene  cornell_box_sky.scene  cornell_box_teapot.scene  cube.scene  dragon.scene  stacks.scene  stacks_debug.scene  test.xml  test2.scene  test_mech.scene  toy.scene  toy_debug.scene  toy_mech.scene
scenes/: cornell_box.scene  cornell_box2.scene  teapot.scene  test_mech.scene  toy.scene  toy_mech.scene
scenes/before add light/: cornell_box.scene
shots/scenes/: cornell_box.scene  cornell_box_empty.scene  cornell_box_env.scene  cornell_box_sky_DOF.scene  cornell_box_teapot.scene  testtest.scene  toy_mech.scene
shots/scenes/standard cornell/: cornell_box.scene
src/: CMakeLists.txt
src/application/: CMakeLists.txt  opengl.hpp  scene_loader.cpp
src/math/: color.cpp  color.hpp  math.hpp  random462.hpp  vector.hpp
src/p3/: CMakeLists.txt  Photon.cpp  Photon.hpp  main.cpp  raytracer.cpp  raytracer.hpp  raytracer.hpp~
src/raytracer/: CMakeLists.txt  Utils.h  azReflection.cpp  azReflection.hpp  constants.h  main.cpp  montecarlo.cpp  montecarlo.h  montecarlo.hpp  raytracer.cpp  raytracer.hpp
src/scene/: BndBox.cpp  BndBox.hpp  CMakeLists.txt  azBVHTree.cpp  azBVHTree.hpp  azLights.cpp  azLights.hpp  material.cpp  material.hpp  mesh.hpp  model.cpp  model.cpp~  model.hpp  model.hpp~  ray.cpp  ray.hpp  scene.cpp  scene.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
